Fixed a bug in index.html, added support for Theodic, added padding to grid

--- a/src/_thm/_variables.sass
+++ b/src/_thm/_variables.sass
@@ -20,3 +20,16 @@ $link-view: #FFA5FF
 // Fonts
 $font-sans: sans-serif
 $font-mono: monospace
+$font-th-sans: TheodicSans
+// Spacing
+$pad-1-1: 1em
+$pad-1-2: $pad-1-1 / 2
+$pad-2-1: $pad-1-1 * 2
+
+// Definitions
+// -----------------------------------------------------------------------------
+// Fonts
+@font-face
+	font-family: "TheodicSans";
+	src: url("../_res/TheodicSans.ttf");
+	font-weight: 400;
