--- a/src/_thm/global.sass
+++ b/src/_thm/global.sass
@@ -12,3 +12,8 @@
 // -----------------------------------------------------------------------------
 .grid
 	display: inline-grid
+	margin: $pad-1-1
+	*
+		margin: $pad-1-2
+.th-sans
+	font-family: $font-th-sans
