--- a/src/_thm/global.sass
+++ b/src/_thm/global.sass
@@ -12,8 +12,10 @@
 // -----------------------------------------------------------------------------
 .grid
 	display: inline-grid
-	margin: $pad-1-1
-	*
-		margin: $pad-1-2
 .th-sans
 	font-family: $font-th-sans
+
+// Spacing
+// -----------------------------------------------------------------------------
+.mar-all-1-1
+	margin: $pad-1-1
