Cleaned up some code and performed some minor revisions

--- a/src/_thm/_defaults.sass
+++ b/src/_thm/_defaults.sass
@@ -5,13 +5,14 @@
 	background: $bg-view
 	border: 0em solid $fg-view
 	border-collapse: collapse
+	border-image-width: 0em
 	border-spacing: 0em
 	box-sizing: border-box
 	color: $fg-view
 	font: 100% $font-sans
 	line-height: 1em
 	margin: 0em
-	overflow: auto
+	overflow: none
 	padding: 0em
 	text-align: justify
 	text-decoration: none
