--- a/src/_thm/global.sass
+++ b/src/_thm/global.sass
@@ -10,12 +10,6 @@
 
 // Classes
 // -----------------------------------------------------------------------------
-.grid
-	display: inline-grid
-.th-sans
-	font-family: $font-th-sans
-
-// Spacing
-// -----------------------------------------------------------------------------
-.mar-all-1-1
-	margin: $pad-1-1
+@import fonts
+@import grids
+@import spacing
