--- a/src/_thm/_variables.sass
+++ b/src/_thm/_variables.sass
@@ -30,6 +30,6 @@ $pad-2-1: $pad-1-1 * 2
 // -----------------------------------------------------------------------------
 // Fonts
 @font-face
-	font-family: "TheodicSans";
-	src: url("../_res/TheodicSans.ttf");
-	font-weight: 400;
+	font-family: "TheodicSans"
+	src: url("../_res/TheodicSans.ttf")
+	font-weight: 400
