Finished converting legacy code

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,15 +1,12 @@
-// Copyright © from the date of the last git commit to this file in this git branch,
-// by all persons with git blame to this file in this git branch, per the terms of
-// the GNU AGPL 3.0 with the additional allowances of the GNU LGPL 3.0.
+$styles: './styles';
 
 // Essentials
 // -----------------------------------------------------------------------------
-@import variables
-@import defaults
-@import elements
+@import '#{$styles}/_variables';
+@import '#{$styles}/_defaults';
 
 // Classes
 // -----------------------------------------------------------------------------
-@import fonts
-@import grids
-@import spacing
+@import '#{$styles}/_fonts';
+@import '#{$styles}/_grids';
+@import '#{$styles}/_spacing';
