--- a/frontend/src/styles/_fonts.scss
+++ b/frontend/src/styles/_fonts.scss
@@ -1,7 +1,4 @@
-// Copyright © from the date of the last git commit to this file in this git branch,
-// by all persons with git blame to this file in this git branch, per the terms of
-// the GNU AGPL 3.0 with the additional allowances of the GNU LGPL 3.0.
-
-.th-sans
-	font-family: $font-th-sans
-	line-height: 1.5em
+.th-sans {
+	font-family: $font-th-sans;
+	line-height: 1.5em;
+}
