--- a/frontend/src/styles/_grids.scss
+++ b/frontend/src/styles/_grids.scss
@@ -1,53 +1,54 @@
-// Copyright © from the date of the last git commit to this file in this git branch,
-// by all persons with git blame to this file in this git branch, per the terms of
-// the GNU AGPL 3.0 with the additional allowances of the GNU LGPL 3.0.
+$header-height: $pad-1-1 * 2.5;
+$footer-height: $pad-1-1 * 1.5;
 
-$header-height: $pad-1-1 * 2.5
-$footer-height: $pad-1-1 * 1.5
+.layout {
+	position: fixed;
+	top: 0em;
+	left: 0em;
+	right: 0em;
+	bottom: 0em;
+	background-color: $bg-win;
+	border-color: $fg-win;
+	color: $fg-win;
 
-.layout
-	position: fixed
-	top: 0em
-	left: 0em
-	right: 0em
-	bottom: 0em
-	background-color: $bg-win
-	border-color: $fg-win
-	font-color: $fg-win
+	.layout-header {
+		z-index: 1;
+		position: fixed;
+		top: 0em;
+		left: 0em;
+		right: 0em;
+		min-height: $header-height;
+		min-width: 100%;
+	}
 
-	.layout-header
-		z-index: 1
-		position: fixed
-		top: 0em
-		left: 0em
-		right: 0em
-		min-height: $header-height
-		min-width: 100%
+	.layout-footer {
+		z-index: 1;
+		position: fixed;
+		left: 0em;
+		right: 0em;
+		bottom: 0px;
+		min-height: $footer-height;
+		min-width: 100%;
+	}
 
-	.layout-footer
-		z-index: 1
-		position: fixed
-		left: 0em
-		right: 0em
-		bottom: 0px
-		min-height: $footer-height
-		min-width: 100%
+	.layout-sidebar {
+		z-index: 1;
+		position: fixed;
+		left: 0em;
+		min-height: calc(100% - $header-height - $footer-height);
+		overflow-y: scroll;
+		width: 25%;
+	}
 
-	.layout-sidebar
-		z-index: 1
-		position: fixed
-		left: 0em
-		min-height: calc(100% - $header-height - $footer-height)
-		overflow-y: scroll
-		width: 25%
-
-	.layout-body
-		z-index: 0
-		overflow-y: scroll
-		position: absolute
-		top: $header-height
-		bottom: $footer-height
-		margin: 0% 12.5%
-		min-height: calc(100% - $header-height - $footer-height)
-		width: 75%
-		min-width: $pad-1-1 * 25
+	.layout-body {
+		z-index: 0;
+		overflow-y: scroll;
+		position: absolute;
+		top: $header-height;
+		bottom: $footer-height;
+		margin: 0% 12.5%;
+		min-height: calc(100% - $header-height - $footer-height);
+		width: 75%;
+		min-width: $pad-1-1 * 25;
+	}
+}
