--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -31,6 +31,6 @@ $pad-2-1: $pad-1-1 * 2;
 // Fonts
 @font-face {
 	font-family: "TheodicSans";
-	src: url("../_res/TheodicSans.ttf");
+	src: url("/res/TheodicSans.ttf");
 	font-weight: 400;
 }
