Added Angular Material

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -5,6 +5,10 @@
 @import './styles/_variables';
 @import './styles/_defaults';
 
+// Libraries
+// -----------------------------------------------------------------------------
+@import './styles/_material';
+
 // Classes
 // -----------------------------------------------------------------------------
 @import './styles/_fonts';
