Renamed style files

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -2,15 +2,15 @@
 
 // Essentials
 // -----------------------------------------------------------------------------
-@import './styles/_variables';
-@import './styles/_defaults';
+@import './styles/variables';
+@import './styles/defaults';
 
 // Libraries
 // -----------------------------------------------------------------------------
-@import './styles/_material';
+@import './styles/material';
 
 // Classes
 // -----------------------------------------------------------------------------
-@import './styles/_fonts';
-@import './styles/_grids';
-@import './styles/_spacing';
+@import './styles/fonts';
+@import './styles/grids';
+@import './styles/spacing';
