--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,24 +1,5 @@
-//NOTE: We can't use variables in @import paths until this GitHub issue is closed:  https://github.com/sass/sass/issues/739
-
-// Font definitions
-// -----------------------------------------------------------------------------
-@import './styles/fonts/noto-sans';
-@import './styles/fonts/theodic-sans';
-// These temporary variables are used in the above files.  I'm setting them here to prevent them from being whatever font above comes last in the alphabet.
-$font-path: '/assets/fonts/';
-$font-family: '';
-
-// Essentials
-// -----------------------------------------------------------------------------
-@import './styles/base/variables';
-@import './styles/base/defaults';
-
-// Libraries
-// -----------------------------------------------------------------------------
-@import './styles/libs/material';
-
-// Classes
-// -----------------------------------------------------------------------------
-@import './styles/classes/fonts';
-@import './styles/classes/grids';
-@import './styles/classes/spacing';
+/* Each folder in `styles/` has a `_` file that includes
+ * all Sass files in its directory, and
+ * all `_` files in its subdirectories (recursively).
+ */
+@import 'styles/_';
