--- a/frontend/src/styles/libs/_material.scss
+++ b/frontend/src/styles/libs/_material.scss
@@ -1,31 +1,7 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
-// Plus imports for other components in your app.
+@import '~@angular/material/theming'; // https://material.angular.io/guide/theming
+@include mat-core(); // The common styles for Angular Material
 
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
-@include mat-core();
-
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$app-primary: mat-palette($mat-indigo);
-$app-accent: mat-palette($mat-pink, A200, A100, A400);
-
-// The warn palette is optional (defaults to red).
-$app-warn: mat-palette($mat-red);
-
-// Create the theme object (a Sass map containing all of the palettes).
-$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
-
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($app-theme);
-
-//
+// Styles added by the CLI
 html, body {
     height: 100%;
 }
@@ -34,3 +10,25 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     @extend .mat-typography;
 }
+
+// Light theme
+$light-primary: mat-palette(#777);
+$light-accent:  mat-palette(#438543);
+$light-warn:    mat-palette(#ac56ac);
+$light-theme:   mat-light-theme($light-primary, $light-accent, $light-warn);
+
+// Dark theme
+$dark-primary: mat-palette(#777);
+$dark-accent:  mat-palette(#438543);
+$dark-warn:    mat-palette(#ac56ac);
+$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+
+// Include the default theme styles.
+.light-theme {
+    @include angular-material-theme($light-theme);
+}
+.dark-theme {
+    @include angular-material-theme($dark-theme);
+}
+
+// Available color palettes:  https://material.io/design/color
