Fixes for custom Material palettes

--- a/frontend/src/styles/libs/material/_material.scss
+++ b/frontend/src/styles/libs/material/_material.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming'; // https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
 @include mat-core(); // The common styles for Angular Material
 
 // Styles added by the CLI
