--- a/frontend/src/styles/libs/material/_themes.scss
+++ b/frontend/src/styles/libs/material/_themes.scss
@@ -1,19 +1,15 @@
+// https://material.angular.io/guide/theming
+
 // Light theme
-$light-primary: mat-palette(map-get($custom-palettes, 'grey'),    '400');
-$light-accent:  mat-palette(map-get($custom-palettes, 'green'),   '400');
-$light-warn:    mat-palette(map-get($custom-palettes, 'magenta'), '400');
+$light-primary: mat-palette(map-get($custom-palettes, '---'));
+$light-accent:  mat-palette(map-get($custom-palettes, '120'));
+$light-warn:    mat-palette(map-get($custom-palettes, '300'));
 $light-theme:   mat-light-theme($light-primary, $light-accent, $light-warn);
+.light-theme   {@include angular-material-theme($light-theme);}
 
 // Dark theme
-$dark-primary: mat-palette(map-get($custom-palettes, 'grey'),    '600');
-$dark-accent:  mat-palette(map-get($custom-palettes, 'green'),   '600');
-$dark-warn:    mat-palette(map-get($custom-palettes, 'magenta'), '600');
+$dark-primary: mat-palette(map-get($custom-palettes, '---'));
+$dark-accent:  mat-palette(map-get($custom-palettes, '120'));
+$dark-warn:    mat-palette(map-get($custom-palettes, '300'));
 $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
-
-// Include the default theme styles.
-.light-theme {
-    @include angular-material-theme($light-theme);
-}
-.dark-theme {
-    @include angular-material-theme($dark-theme);
-}
+.dark-theme   {@include angular-material-theme($dark-theme);}
