Added some styling to the header and footer

--- a/frontend/src/app/root/components/global-header/global-header.template.html
+++ b/frontend/src/app/root/components/global-header/global-header.template.html
@@ -1,7 +1,7 @@
 <ul>
     <li *ngFor="let button of buttons">
-        <a (click)="changeState(button.state)">
+        <button (click)="changeState(button.state)">
             {{button.text | i18n}}
-        </a>
+        </button>
     </li>
 </ul>
