--- a/frontend/src/app/root/root.template.html
+++ b/frontend/src/app/root/root.template.html
@@ -1,3 +1,5 @@
 <global-header></global-header>
-<router-outlet></router-outlet>
+<div>
+    <router-outlet></router-outlet>
+</div>
 <global-footer></global-footer>
