Wired up the new style modules

--- a/frontend/src/app/core/core.module.scss
+++ b/frontend/src/app/core/core.module.scss
@@ -1,4 +1,4 @@
-@import 'variables';
-@import 'defaults';
-@import 'root';
-@import 'elements';
+@import 'styles/reset.element';
+@import 'styles/root.element';
+@import 'styles/utility.element';
+@import 'styles/theming.element';
