--- a/frontend/src/app/shared/shared.module.scss
+++ b/frontend/src/app/shared/shared.module.scss
@@ -1,4 +1,2 @@
-@import 'fonts/_';
-@import 'base/_';
-@import 'libs/_';
-@import 'classes/_';
+@import 'fonts/fonts.module';
+@import 'classes/classes.module';
