--- a/frontend/src/config/styles/styles.module.scss
+++ b/frontend/src/config/styles/styles.module.scss
@@ -1,3 +1,3 @@
-@import 'material';
-@import 'palettes';
-@import 'themes';
+@import 'material.const';
+@import 'material.class';
+@import 'variables.const';
