--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,3 @@
-@import 'config/styles/styles.module';
+@import 'config/config.module';
 @import 'core/core.module';
 @import 'shared/shared.module';
