--- a/frontend/src/config/config.module.scss
+++ b/frontend/src/config/config.module.scss
@@ -1,3 +1,3 @@
-@import 'material.const';
-@import 'material.class';
-@import 'variables.const';
+@import 'styles/material.const';
+@import 'styles/material.class';
+@import 'styles/variables.const';
