--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,3 @@
 @import 'config/config.module';
-@import 'core/core.module';
-@import 'shared/shared.module';
+@import 'app/core/core.module';
+@import 'app/shared/shared.module';
