Quick style cleanup and fixes

--- a/frontend/src/app/core/styles/reset.element.scss
+++ b/frontend/src/app/core/styles/reset.element.scss
@@ -1,12 +1,12 @@
 * {
 	background: transparent;
-	border: 0em solid black;
+	border: 0em solid $fg-view;
 	border-collapse: collapse;
 	border-image-width: 0em;
 	border-spacing: 0em;
 	box-sizing: border-box;
-	color: black;
-	font: 100% 'Sans';
+	color: $fg-view;
+	font: 100% $font-sans;
 	line-height: 1em;
 	margin: 0em;
 	overflow: none;
