--- a/frontend/src/app/root/root.style.scss
+++ b/frontend/src/app/root/root.style.scss
@@ -5,6 +5,8 @@
     flex-direction: column;
     >div {
         flex-grow: 1;
-        margin: 1rem;
+        margin: 1rem 0;
+        padding: 0 1rem;
+        overflow-y: auto;
     }
 }
