Removed unnecessary file extension

--- a/frontend/src/app/root/components/global-footer/global-footer.style.scss
+++ b/frontend/src/app/root/components/global-footer/global-footer.style.scss
@@ -1,4 +1,4 @@
-@import 'src/config/styles/variables.const.scss';
+@import 'src/config/styles/variables.const';
 :host {
     width: 100%;
     background-color: $fg-view;
