--- a/frontend/src/app/shared/fonts/fonts.module.scss
+++ b/frontend/src/app/shared/fonts/fonts.module.scss
@@ -2,5 +2,5 @@
 @import 'theodic-sans.const';
 
 // These temporary variables are used in the above files.  I'm setting them here to prevent them from being whatever font above comes last in the alphabet.
-$font-path: '/assets/fonts/';
+$font-path: '/assets/res/fnt/';
 $font-family: '';
