--- a/frontend/src/app/views/root/components/global-header/global-header.style.scss
+++ b/frontend/src/app/views/root/components/global-header/global-header.style.scss
@@ -10,7 +10,8 @@
         display: flex;
         flex-wrap: wrap;
         list-style-type: none;
-        >li >button {
+        >li >a {
+            display: block;
             padding: 1rem;
             cursor: pointer;
         }
