Switched to [innerHtml] from interpolation

--- a/frontend/src/app/views/home/home.template.html
+++ b/frontend/src/app/views/home/home.template.html
@@ -1,2 +1,2 @@
-<h2>{{'INTRO_HEADER' | i18n}}</h2>
-<p>{{'INTRO_BODY' | i18n}}</p>
+<h2  [innerHtml]="'INTRO_HEADER' | i18n"></h2>
+<div [innerHtml]="'INTRO_BODY'   | i18n"></div>
