--- a/frontend/src/app/views/root/components/global-header/global-header.template.html
+++ b/frontend/src/app/views/root/components/global-header/global-header.template.html
@@ -1,15 +1,11 @@
 <ul>
     <li *ngFor="let button of leftButtons">
-        <a [routerLink]="button.route">
-            {{button.text | i18n}}
-        </a>
+        <a [routerLink]="button.route" [innerHtml]="button.text | i18n"></a>
     </li>
 </ul>
 <span></span>
 <ul>
     <li *ngFor="let button of rightButtons">
-        <a [routerLink]="button.route">
-            {{button.text | i18n}}
-        </a>
+        <a [routerLink]="button.route" [innerHtml]="button.text | i18n"></a>
     </li>
 </ul>
