--- a/frontend/src/app/views/root/root.style.scss
+++ b/frontend/src/app/views/root/root.style.scss
@@ -2,11 +2,32 @@
     height: 100%;
     width: 100%;
     display: flex;
-    flex-direction: column;
     >div {
         flex-grow: 1;
+        overflow-y: auto;
+    }
+}
+
+:host-context(.ltr),
+:host-context(.rtl) {
+    flex-direction: column;
+    >div {
         margin: 1rem 0;
         padding: 0 1rem;
-        overflow-y: auto;
+    }
+    >* {
+        max-width: 60rem;
+    }
+}
+
+:host-context(.ttb),
+:host-context(.btt) {
+    flex-direction: row;
+    >div {
+        margin: 0 1rem;
+        padding: 1rem 0;
+    }
+    >* {
+        max-height: 60rem;
     }
 }
