--- a/frontend/src/app/views/root/components/global-footer/global-footer.style.scss
+++ b/frontend/src/app/views/root/components/global-footer/global-footer.style.scss
@@ -1,14 +1,24 @@
 @import 'src/config/styles/variables.const';
 :host {
-    width: 100%;
     background-color: $fg-view;
     &, * {
         color: $bg-view;
     }
     padding: 1rem;
     position: sticky;
-    bottom: 0;
     >p {
         margin: 0;
     }
+}
+
+:host-context(.ltr),
+:host-context(.rtl) {
+    width: 100%;
+    bottom: 0;
+}
+
+:host-context(.ttb),
+:host-context(.btt) {
+    height: 100%;
+    left: 0;
 }
