Tidied new text flow code

--- a/frontend/src/app/core/styles/reset.element.scss
+++ b/frontend/src/app/core/styles/reset.element.scss
@@ -20,5 +20,5 @@
 	// z-index: 0;
 }
 
-:host-context(body.ttb) * {vertical-align: top;}
-:host-context(body.btt) * {vertical-align: bottom;}
+:host-context(html.ttb) * {vertical-align: top;}
+:host-context(html.btt) * {vertical-align: bottom;}
