--- a/frontend/src/app/views/root/components/global-header/global-header.style.scss
+++ b/frontend/src/app/views/root/components/global-header/global-header.style.scss
@@ -21,10 +21,10 @@
     }
 }
 
-:host-context(body.hor) {
+:host-context(html.hor) {
     width: 100%;
 }
 
-:host-context(body.ver) {
+:host-context(html.ver) {
     height: 100%;
 }
