Added a couple Material elements

--- a/frontend/src/app/views/root/components/global-footer/global-footer.style.scss
+++ b/frontend/src/app/views/root/components/global-footer/global-footer.style.scss
@@ -1,20 +1,21 @@
 @import 'src/config/styles/variables.const';
-:host {
+:host mat-toolbar {
+    font-size: unset;
     background-color: $fg-view;
     &, * {
         color: $bg-view;
     }
-    padding: 1rem;
     position: sticky;
+    padding: 1rem;
     >p {
         margin: 0;
     }
 }
 
-:host-context(html.hor) {width:  100%;}
-:host-context(html.ver) {height: 100%;}
+:host-context(html.hor) mat-toolbar {width:  100%;}
+:host-context(html.ver) mat-toolbar {height: 100%;}
 
-:host-context(html.hor.ttb) {bottom: 0;}
-:host-context(html.hor.btt) {top:    0;}
-:host-context(html.ver.ltr) {right:  0;}
-:host-context(html.ver.rtl) {left:   0;}
+:host-context(html.hor.ttb) mat-toolbar {bottom: 0;}
+:host-context(html.hor.btt) mat-toolbar {top:    0;}
+:host-context(html.ver.ltr) mat-toolbar {right:  0;}
+:host-context(html.ver.rtl) mat-toolbar {left:   0;}
