--- a/frontend/src/app/core/core.module.scss
+++ b/frontend/src/app/core/core.module.scss
@@ -1,4 +1,5 @@
 @import 'styles/reset.element';
 @import 'styles/root.element';
 @import 'styles/utility.element';
-@import 'styles/theming.element';
+@import 'styles/material.element';
+@import 'styles/themes.class';
