--- a/frontend/src/app/views/root/components/global-footer/global-footer.style.scss
+++ b/frontend/src/app/views/root/components/global-footer/global-footer.style.scss
@@ -5,17 +5,11 @@
     &, * {
         color: $bg-view;
     }
-    position: sticky;
-    padding: 1rem;
-    >p {
+    padding: 0;
+    >* {
+        padding: 1rem;
         margin: 0;
     }
 }
-
 :host-context(html.hor) mat-toolbar {width:  100%;}
 :host-context(html.ver) mat-toolbar {height: 100%;}
-
-:host-context(html.hor.ttb) mat-toolbar {bottom: 0;}
-:host-context(html.hor.btt) mat-toolbar {top:    0;}
-:host-context(html.ver.ltr) mat-toolbar {right:  0;}
-:host-context(html.ver.rtl) mat-toolbar {left:   0;}
