--- a/frontend/src/app/core/styles/material/material.element.scss
+++ b/frontend/src/app/core/styles/material/material.element.scss
@@ -1,5 +1,6 @@
 @include mat-core(); // The common styles for Angular Material
 body {
+    @extend .mat-app-background;
     @extend .mat-typography;
 }
 
@@ -11,6 +12,15 @@ body {
 .mat-flat-button.mat-flat-button
 {
     padding: 1rem;
-    line-height: normal;
+    line-height: unset;
     min-width: unset;
+}
+
+// I don't want my toolbars to be forced into a minimum height.
+.mat-toolbar-row.mat-toolbar-row,
+.mat-toolbar-single-row.mat-toolbar-single-row {
+    height: unset;
+}
+.mat-toolbar.mat-toolbar {
+    padding: unset;
 }
