--- a/frontend/src/config/styles/material/themes.const.scss
+++ b/frontend/src/config/styles/material/themes.const.scss
@@ -2,13 +2,13 @@
 // https://material.angular.io/guide/theming
 
 // Light theme
-// $light-primary: mat-palette(map-get($custom-palettes, '---'));
-// $light-accent:  mat-palette(map-get($custom-palettes, '120'));
-// $light-warn:    mat-palette(map-get($custom-palettes, '300'));
-// $light-theme:   mat-light-theme($light-primary, $light-accent, $light-warn);
+$light-primary: mat-palette(map-get($custom-palettes, '---'), 500, 900, 100);
+$light-accent:  mat-palette(map-get($custom-palettes, '120'), 500, 900, 100);
+$light-warn:    mat-palette(map-get($custom-palettes, '300'), 500, 900, 100);
+$light-theme:   mat-light-theme($light-primary, $light-accent, $light-warn);
 
 // Dark theme
-// $dark-primary: mat-palette(map-get($custom-palettes, '---'));
-// $dark-accent:  mat-palette(map-get($custom-palettes, '120'));
-// $dark-warn:    mat-palette(map-get($custom-palettes, '300'));
-// $dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
+$dark-primary: mat-palette(map-get($custom-palettes, '---'), 500, 900, 100);
+$dark-accent:  mat-palette(map-get($custom-palettes, '120'), 500, 900, 100);
+$dark-warn:    mat-palette(map-get($custom-palettes, '300'), 500, 900, 100);
+$dark-theme:   mat-dark-theme($dark-primary, $dark-accent, $dark-warn);
